Added filter and redesign

--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,9 @@
 /Calculator/Calculator/.vs/Calculator/v17/.suo
 /Calculator/Calculator/.vs/Calculator/v17/DocumentLayout.json
 /Calculator/Calculator/.vs/Calculator/FileContentIndex/2350b8df-0054-4588-af41-d4dfb9550e36.vsidx
+/ContactApp/ContactApp/ContactApp/bin/Debug/net8.0-windows/ContactApp.pdb
+/ContactApp/ContactApp/ContactApp/bin/Debug/net8.0-windows/ContactApp.exe
+/ContactApp/ContactApp/ContactApp/bin/Debug/net8.0-windows/ContactApp.dll
+/ContactApp/ContactApp/ContactApp/obj/ContactApp.csproj.nuget.dgspec.json
+/ContactApp/ContactApp/ContactApp/obj/project.assets.json
+/ContactApp/ContactApp/ContactApp/obj/project.nuget.cache
